K8s/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-webapp-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: go-webapp
  template:
    metadata:
      labels:
        app: go-webapp
    spec:
      containers:
      - name: go-webapp
        image: shubhsjadhav95/go-webapp:v1
        ports:
        - containerPort: 8080
