K8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-webapp
spec:
  selector:
    app: go-webapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
