K8s/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: 13.235.218.133
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-webapp
            port:
              number: 80
